--- a/table1.html
+++ b/table1.html
@@ -1,9 +1,10 @@
 <html>
+    <link rel="stylesheet" href="table1.css">
     <head>
         <title>Table Example</title>
     </head>
     <body>
-        <table>
+        <table border="4">
             <tr>
                 <th>First Name</th> <th>Last Name</th><th>Mobile Number</th>
             </tr>
@@ -14,7 +15,25 @@
                 <td>maycel</td><td>Balak</td><td>01728132015</td>
             </tr>
             <tr>
-                <td>Leo</td><td>Messi</td><td>01523162910</td>
+                <td>Leo</td><td>Messi</td><td>01523162910</td> <td>Khan</td>
+            </tr>
+            <tr>
+                <td>Nazmul</td><td>Khan</td><td>01523162910</td>
+            </tr>
+        </table> 
+        <br><br><br>
+        <table class="table2">
+            <tr>
+                <th>First Name</th> <th>Last Name</th><th>Mobile Number</th>
+            </tr>
+            <tr>
+                <td>David</td><td>Backham</td><td>01728491649</td>
+            </tr>
+            <tr>
+                <td>maycel</td><td>Balak</td><td>01728132015</td>
+            </tr>
+            <tr>
+                <td>Leo</td><td>Messi</td><td>01523162910</td> <td>Khan</td>
             </tr>
             <tr>
                 <td>Nazmul</td><td>Khan</td><td>01523162910</td>
