--- a/table1.html
+++ b/table1.html
@@ -4,7 +4,7 @@
         <title>Table Example</title>
     </head>
     <body>
-        <table border="4">
+        <table border="4"> <!--Here 4= border width-->
             <tr>
                 <th>First Name</th> <th>Last Name</th><th>Mobile Number</th>
             </tr>
@@ -39,6 +39,5 @@
                 <td>Nazmul</td><td>Khan</td><td>01523162910</td>
             </tr>
         </table> 
-        
     </body>
 </html>
