--- a/attributes.html
+++ b/attributes.html
@@ -12,5 +12,7 @@
         <p title="Play with JS">This is Paragraph Attributes</p>
         <!--The value of the title attribute will be displayed as a title when you mouse over the element.-->
         
+        <h2>HTML Formating Example</h2>
+        <p>My favorite color is <del>blue</del><ins> red</ins></p>
     </body>
 </html>
