--- a/table1.html
+++ b/table1.html
@@ -60,7 +60,7 @@
             <tr >
                 <th>First Name</th> <th>Last Name</th><th>Mobile Number</th>
             </tr>
-            <tr">
+            <tr>
                 <td>David</td><td>Backham</td><td>01728491649</td>
             </tr>
             <tr>
@@ -71,6 +71,66 @@
             </tr>
             <tr>
                 <td>Nazmul</td><td>Khan</td><td>01523162910</td>
+            </tr>
+        </table> 
+        <br><br>
+        <table class="table4" id="alter">
+            <tr >
+                <th>S/L</th> <th>Name of Department</th><th>Number of Degree</th>
+            </tr>
+            <tr>
+                <td>1</td><td>Department of Computer Science and Engineering (CSE)</td><td>B.Sc. (Engg.), M.Sc. (Engg.), Ph.D.</td>
+            </tr>
+            <tr>
+                <td>2</td><td>Department of Information and Communication Technology (ICT) </td><td>B.Sc. (Engg.), M.Sc. (Engg.), Ph.D.</td>
+            </tr>
+            <tr>
+                <td>3</td><td>Department of Textile Engineering (TE)</td><td>B.Sc. (Engg.), M.Sc. (Engg.)</td>
+            </tr>
+            <tr>
+                <td>4</td><td>Department of Environmental Science and Resource Management (ESRM)</td><td>B.Sc. (Hon’s), M.S., Ph.D.</td>
+            </tr>
+            <tr>
+                <td>5</td><td>Department of Criminology and Police Science (CPS) </td><td>B.Sc. (Hon’s), M.S., Ph.D.</td>
+            </tr>
+            <tr>
+                <td>6</td><td>Department of Food Technology and Nutritional Science (FTNS) </td><td>B.Sc. (Hon’s), M.S., Ph.D.</td>
+            </tr>
+            <tr>
+                <td>7</td><td>Department of Biotechnology and Genetic Engineering (BGE)</td><td>B.Sc. (Hon’s), M.S., Ph.D.</td>
+            </tr>
+            <tr>
+                <td>8</td><td>Department of Biochemistry and Molecular Biology (BMB)</td><td>B.Sc. (Hon’s), M.S., Ph.D.</td>
+            </tr>
+            <tr>
+                <td>9</td><td>Department of Pharmacy</td><td>B.Pharm. (Professional), M.Pharm., Ph.D.</td>
+            </tr>
+            <tr>
+                <td>10</td><td>Department of Chemistry</td><td>B.Sc. (Hon’s), M.S., M.Phil., Ph.D.</td>
+            </tr>
+            <tr>
+                <td>11</td><td>Department of Mathematics</td><td>B.Sc. (Hon’s), M.S., M.Phil., Ph.D.</td>
+            </tr>
+            <tr>
+                <td>12</td><td>Department of Physics</td><td>B.Sc. (Hon’s), M.S., M.Phil., Ph.D.</td>
+            </tr>
+            <tr>
+                <td>13</td><td>Department of Statistics</td><td>B.Sc. (Hon’s), M.S., M.Phil., Ph.D.</td>
+            </tr>
+            <tr>
+                <td>14</td><td>Department of Business Administration </td><td>B.B.A., M.B.A., M.Phil., Ph.D.</td>
+            </tr>
+            <tr>
+                <td>15</td><td>Department of Accounting </td><td>B.B.A., M.B.A., M.Phil., Ph.D.</td>
+            </tr>
+            <tr>
+                <td>16</td><td>Department of Management</td><td>B.B.A., M.B.A., M.Phil., Ph.D.</td>
+            </tr>
+            <tr>
+                <td>17</td><td>Department of Economics</td><td>B.S.S, M.S.S.</td>
+            </tr>
+            <tr>
+                <td>18</td><td>Department of English</td><td>M.A.</td>
             </tr>
         </table> 
     </body>
